--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+//
+    // Enable view binding and synthetic binding
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -45,6 +50,16 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'com.google.android.material:material:1.9.0'
+    //chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+
+    // Kotlin synthetic binding
+    implementation 'androidx.core:core-ktx:1.10.1'
+
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
 
 
 }
